--- a/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch0.tex
+++ b/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch0.tex
@@ -79,6 +79,8 @@ import Mathlib
 import Visored.Obvious
 import Visored.Tactics
 
+set_option maxHeartbeats 20000000000
+
 def h (a b : ℝ) : ((a + b : ℝ) ^ (2:ℕ) : ℝ) ≥ ((0:ℕ) : ℝ) := by
   have h1 : ((a + b : ℝ) ^ (2:ℕ) : ℝ) ≥ ((0:ℕ) : ℝ) := by
     simp
@@ -126,6 +128,8 @@ Lean 4 code:
 import Mathlib
 import Visored.Obvious
 import Visored.Tactics
+
+set_option maxHeartbeats 20000000000
 
 def h (x : ℝ) (h1 : x ≥ ((0:ℕ) : ℝ)) (y : ℝ) (h2 : y ≥ ((0:ℕ) : ℝ)) : ((x + y : ℝ) / ((2:ℕ) : ℝ) : ℝ) ≥ √ (x * y : ℝ) := by
   have h3 : ((√ x - √ y : ℝ) ^ (2:ℕ) : ℝ) = (((√ x ^ (2:ℕ) : ℝ) - (((2:ℕ) * √ x : ℝ) * √ y : ℝ) : ℝ) + (√ y ^ (2:ℕ) : ℝ) : ℝ) := by obvious
@@ -280,6 +284,8 @@ Lean 4 code:
 import Mathlib
 import Visored.Obvious
 import Visored.Tactics
+
+set_option maxHeartbeats 20000000000
 
 def h (a b c : ℝ) : (((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) + (c ^ (2:ℕ) : ℝ) : ℝ) ≥ (((a * b : ℝ) + (b * c : ℝ) : ℝ) + (c * a : ℝ) : ℝ) := by
   first
@@ -873,6 +879,8 @@ import Mathlib
 import Visored.Obvious
 import Visored.Tactics
 
+set_option maxHeartbeats 20000000000
+
 def h (x : ℝ) (h1 : x > ((0:ℕ) : ℝ)) : (x + (((1:ℕ) : ℝ) / x : ℝ) : ℝ) ≥ ((2:ℕ) : ℝ) := by
   first
   | have h2 : ((x - ((1:ℕ) : ℝ) : ℝ) ^ (2:ℕ) : ℝ) ≥ ((0:ℕ) : ℝ) := by calc
@@ -933,6 +941,8 @@ Lean 4 code:
 import Mathlib
 import Visored.Obvious
 import Visored.Tactics
+
+set_option maxHeartbeats 20000000000
 
 def h (a b : ℝ) : (((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) / ((2:ℕ) : ℝ) : ℝ) ≥ (((a + b : ℝ) / ((2:ℕ) : ℝ) : ℝ) ^ (2:ℕ) : ℝ) := by
   first
