--- a/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
+++ b/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
@@ -260,7 +260,7 @@ def h (x : ℝ) (h1 : x > ((0:ℕ) : ℝ)) : (x + (((1:ℕ) : ℝ) / x : ℝ) : 
     have d36 : (((((1:ℕ) : ℝ) + (((-2:ℤ) : ℝ) * (x ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((0:ℕ) : ℝ) : ℝ) = ((((1:ℕ) : ℝ) + (((-2:ℤ) : ℝ) * (x ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_nf_add_zero
     have d37 : (((((1:ℕ) : ℝ) + (((-2:ℤ) : ℝ) * (x ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((-((0:ℕ) : ℤ) : ℤ) : ℝ) : ℝ) = ((((1:ℕ) : ℝ) + (((-2:ℤ) : ℝ) * (x ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_add_eq d34 d35 eq_identity_coercion eq_int_to_real_coercion d36
     have d38 : (((((1:ℕ) : ℝ) + (((-2:ℤ) : ℝ) * (x ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) : ℝ) - ((0:ℕ) : ℝ) : ℝ) = ((((1:ℕ) : ℝ) + (((-2:ℤ) : ℝ) * (x ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_sub_eqs_add_neg d37 neg_nat_to_real_coercion
-    have d39 : (((x ^ (2:ℕ) : ℝ) - (((2:ℕ) : ℝ) * x : ℝ) : ℝ) + ((1:ℕ) : ℝ) : ℝ) ≥ ((0:ℕ) : ℝ) ↔ ((((1:ℕ) : ℝ) + (((-2:ℤ) : ℝ) * (x ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) : ℝ) ≥ ((0:ℕ) : ℝ) := by term_derivation_num_comparison
+    have d39 : (((x ^ (2:ℕ) : ℝ) - (((2:ℕ) : ℝ) * x : ℝ) : ℝ) + ((1:ℕ) : ℝ) : ℝ) ≥ ((0:ℕ) : ℝ) ↔ ((((1:ℕ) : ℝ) + (((-2:ℤ) : ℝ) * (x ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) : ℝ) ≥ ((0:ℕ) : ℝ) := by term_derivation_num_comparison ≥ d19 d20 d38
     have d40 : x = x := by term_derivation_reflection
     have d41 : (2:ℕ) = (2:ℕ) := by term_derivation_reflection
     have d42 : (x ^ (2:ℕ) : ℝ) = (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) := by term_derivation_non_reduced_power
@@ -290,7 +290,7 @@ def h (x : ℝ) (h1 : x > ((0:ℕ) : ℝ)) : (x + (((1:ℕ) : ℝ) / x : ℝ) : 
     have d66 : ((((1:ℕ) : ℝ) + (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((-2:ℤ) : ℝ) * (x ^ (1:ℕ) : ℝ) : ℝ) : ℝ) = ((((1:ℕ) : ℝ) + (((-2:ℤ) : ℝ) * (x ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_sum_add_product_greater
     have d67 : ((((1:ℕ) : ℝ) + (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (-(((2:ℕ) : ℝ) * (x ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = ((((1:ℕ) : ℝ) + (((-2:ℤ) : ℝ) * (x ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_add_eq d56 d63 eq_identity_coercion eq_identity_coercion d66
     have d68 : ((((1:ℕ) : ℝ) + (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) : ℝ) - (((2:ℕ) : ℝ) * (x ^ (1:ℕ) : ℝ) : ℝ) : ℝ) = ((((1:ℕ) : ℝ) + (((-2:ℤ) : ℝ) * (x ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_sub_eqs_add_neg d67 neg_identity_coercion
-    have d69 : ((x ^ (2:ℕ) : ℝ) + ((1:ℕ) : ℝ) : ℝ) ≥ (((2:ℕ) : ℝ) * x : ℝ) ↔ ((((1:ℕ) : ℝ) + (((-2:ℤ) : ℝ) * (x ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) : ℝ) ≥ ((0:ℕ) : ℝ) := by term_derivation_num_comparison
+    have d69 : ((x ^ (2:ℕ) : ℝ) + ((1:ℕ) : ℝ) : ℝ) ≥ (((2:ℕ) : ℝ) * x : ℝ) ↔ ((((1:ℕ) : ℝ) + (((-2:ℤ) : ℝ) * (x ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) : ℝ) ≥ ((0:ℕ) : ℝ) := by term_derivation_num_comparison ≥ d45 d49 d68
     have d70 : ((x ^ (2:ℕ) : ℝ) + ((1:ℕ) : ℝ) : ℝ) ≥ (((2:ℕ) : ℝ) * x : ℝ) := by term_derivation_non_trivial_hypothesis_equivalence h4 d39 d69
     assumption
   have h1 : x > ((0:ℕ) : ℝ) := by old_main_hypothesis
@@ -591,7 +591,7 @@ def h (a b : ℝ) (h1 : a > ((0:ℕ) : ℝ)) (h2 : b > ((0:ℕ) : ℝ)) : ((a / 
     have d41 : (((((-2:ℤ) : ℝ) + (((1:ℕ) : ℝ) * ((b ^ (-1:ℤ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (-1:ℤ) : ℝ) : ℝ) : ℝ) : ℝ) + ((0:ℕ) : ℝ) : ℝ) = ((((-2:ℤ) : ℝ) + (((1:ℕ) : ℝ) * ((b ^ (-1:ℤ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (-1:ℤ) : ℝ) : ℝ) : ℝ) : ℝ) := by term_derivation_nf_add_zero
     have d42 : (((((-2:ℤ) : ℝ) + (((1:ℕ) : ℝ) * ((b ^ (-1:ℤ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (-1:ℤ) : ℝ) : ℝ) : ℝ) : ℝ) + ((-((0:ℕ) : ℤ) : ℤ) : ℝ) : ℝ) = ((((-2:ℤ) : ℝ) + (((1:ℕ) : ℝ) * ((b ^ (-1:ℤ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (-1:ℤ) : ℝ) : ℝ) : ℝ) : ℝ) := by term_derivation_add_eq d39 d40 eq_identity_coercion eq_int_to_real_coercion d41
     have d43 : (((((-2:ℤ) : ℝ) + (((1:ℕ) : ℝ) * ((b ^ (-1:ℤ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (-1:ℤ) : ℝ) : ℝ) : ℝ) : ℝ) - ((0:ℕ) : ℝ) : ℝ) = ((((-2:ℤ) : ℝ) + (((1:ℕ) : ℝ) * ((b ^ (-1:ℤ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (-1:ℤ) : ℝ) : ℝ) : ℝ) : ℝ) := by term_derivation_sub_eqs_add_neg d42 neg_nat_to_real_coercion
-    have d44 : (((a / b : ℝ) - ((2:ℕ) : ℝ) : ℝ) + (b / a : ℝ) : ℝ) ≥ ((0:ℕ) : ℝ) ↔ ((((-2:ℤ) : ℝ) + (((1:ℕ) : ℝ) * ((b ^ (-1:ℤ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (-1:ℤ) : ℝ) : ℝ) : ℝ) : ℝ) ≥ ((0:ℕ) : ℝ) := by term_derivation_num_comparison
+    have d44 : (((a / b : ℝ) - ((2:ℕ) : ℝ) : ℝ) + (b / a : ℝ) : ℝ) ≥ ((0:ℕ) : ℝ) ↔ ((((-2:ℤ) : ℝ) + (((1:ℕ) : ℝ) * ((b ^ (-1:ℤ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (-1:ℤ) : ℝ) : ℝ) : ℝ) : ℝ) ≥ ((0:ℕ) : ℝ) := by term_derivation_num_comparison ≥ d15 d16 d43
     have d45 : a = a := by term_derivation_reflection
     have d46 : b = b := by term_derivation_reflection
     have d47 : (a * (b ^ (-1:ℤ) : ℝ) : ℝ) = (((1:ℕ) : ℝ) * ((b ^ (-1:ℤ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_atom_mul_exponential_greater
@@ -635,7 +635,7 @@ def h (a b : ℝ) (h1 : a > ((0:ℕ) : ℝ)) (h2 : b > ((0:ℕ) : ℝ)) : ((a / 
     have d85 : (((((0:ℕ) : ℝ) + (((1:ℕ) : ℝ) * ((b ^ (-1:ℤ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (-1:ℤ) : ℝ) : ℝ) : ℝ) : ℝ) + ((-2:ℤ) : ℝ) : ℝ) = ((((-2:ℤ) : ℝ) + (((1:ℕ) : ℝ) * ((b ^ (-1:ℤ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (-1:ℤ) : ℝ) : ℝ) : ℝ) : ℝ) := by term_derivation_sum_add_literal d83 d84 comm_ring_add_identity_coercion real_real_real_coercion_triangle real_real_real_coercion_triangle eq_identity_coercion comm_ring_add_identity_coercion real_real_real_coercion_triangle int_real_real_coercion_triangle
     have d86 : (((((0:ℕ) : ℝ) + (((1:ℕ) : ℝ) * ((b ^ (-1:ℤ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (-1:ℤ) : ℝ) : ℝ) : ℝ) : ℝ) + ((-((2:ℕ) : ℤ) : ℤ) : ℝ) : ℝ) = ((((-2:ℤ) : ℝ) + (((1:ℕ) : ℝ) * ((b ^ (-1:ℤ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (-1:ℤ) : ℝ) : ℝ) : ℝ) : ℝ) := by term_derivation_add_eq d78 d79 eq_identity_coercion eq_int_to_real_coercion d85
     have d87 : (((((0:ℕ) : ℝ) + (((1:ℕ) : ℝ) * ((b ^ (-1:ℤ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (-1:ℤ) : ℝ) : ℝ) : ℝ) : ℝ) - ((2:ℕ) : ℝ) : ℝ) = ((((-2:ℤ) : ℝ) + (((1:ℕ) : ℝ) * ((b ^ (-1:ℤ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (-1:ℤ) : ℝ) : ℝ) : ℝ) : ℝ) := by term_derivation_sub_eqs_add_neg d86 neg_nat_to_real_coercion
-    have d88 : ((a / b : ℝ) + (b / a : ℝ) : ℝ) ≥ ((2:ℕ) : ℝ) ↔ ((((-2:ℤ) : ℝ) + (((1:ℕ) : ℝ) * ((b ^ (-1:ℤ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (-1:ℤ) : ℝ) : ℝ) : ℝ) : ℝ) ≥ ((0:ℕ) : ℝ) := by term_derivation_num_comparison
+    have d88 : ((a / b : ℝ) + (b / a : ℝ) : ℝ) ≥ ((2:ℕ) : ℝ) ↔ ((((-2:ℤ) : ℝ) + (((1:ℕ) : ℝ) * ((b ^ (-1:ℤ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (-1:ℤ) : ℝ) : ℝ) : ℝ) : ℝ) ≥ ((0:ℕ) : ℝ) := by term_derivation_num_comparison ≥ d56 d57 d87
     have d89 : ((a / b : ℝ) + (b / a : ℝ) : ℝ) ≥ ((2:ℕ) : ℝ) := by term_derivation_non_trivial_hypothesis_equivalence h5 d44 d88
     assumption
   obvious
