--- a/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
+++ b/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
@@ -223,7 +223,7 @@ def h (x : ℝ) (h1 : x > ((0:ℕ) : ℝ)) : (x + (((1:ℕ) : ℝ) / x : ℝ) : 
   have h5 : ((x ^ (2:ℕ) : ℝ) + ((1:ℕ) : ℝ) : ℝ) ≥ (((2:ℕ) : ℝ) * x : ℝ) := by
     have d : x = x := by term_derivation_reflection
     have d1 : (2:ℕ) = (2:ℕ) := by term_derivation_reflection
-    have d2 : (x ^ (2:ℕ) : ℝ) = (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) := by term_derivation_non_reduced_power
+    have d2 : (x ^ (2:ℕ) : ℝ) = (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) := by term_derivation_non_reduced_power d d1
     have d3 : (2:ℕ) = (2:ℕ) := by term_derivation_reflection
     have d4 : x = x := by term_derivation_reflection
     have d5 : (((2:ℕ) : ℝ) * x : ℝ) = (((2:ℕ) : ℝ) * (x ^ (1:ℕ) : ℝ) : ℝ) := by term_derivation_non_one_literal_mul_atom
@@ -252,7 +252,7 @@ def h (x : ℝ) (h1 : x > ((0:ℕ) : ℝ)) : (x + (((1:ℕ) : ℝ) / x : ℝ) : 
     have d28 : (((1:ℕ) : ℝ) + (((-2:ℤ) : ℝ) * (x ^ (1:ℕ) : ℝ) : ℝ) : ℝ) = (((1:ℕ) : ℝ) + (((-2:ℤ) : ℝ) * (x ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_add_eq d21 d26 eq_nat_to_real_coercion eq_identity_coercion d27
     have d29 : x = x := by term_derivation_reflection
     have d30 : (2:ℕ) = (2:ℕ) := by term_derivation_reflection
-    have d31 : (x ^ (2:ℕ) : ℝ) = (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) := by term_derivation_non_reduced_power
+    have d31 : (x ^ (2:ℕ) : ℝ) = (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) := by term_derivation_non_reduced_power d29 d30
     have d32 : (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) = (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) := by term_derivation_one_mul
     have d33 : ((((1:ℕ) : ℝ) + (((-2:ℤ) : ℝ) * (x ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) : ℝ) = ((((1:ℕ) : ℝ) + (((-2:ℤ) : ℝ) * (x ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_reflection
     have d34 : ((((1:ℕ) : ℝ) + (((-2:ℤ) : ℝ) * (x ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) : ℝ) = ((((1:ℕ) : ℝ) + (((-2:ℤ) : ℝ) * (x ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_add_eq d28 d32 eq_identity_coercion eq_identity_coercion d33
@@ -263,7 +263,7 @@ def h (x : ℝ) (h1 : x > ((0:ℕ) : ℝ)) : (x + (((1:ℕ) : ℝ) / x : ℝ) : 
     have d39 : (((x ^ (2:ℕ) : ℝ) - (((2:ℕ) : ℝ) * x : ℝ) : ℝ) + ((1:ℕ) : ℝ) : ℝ) ≥ ((0:ℕ) : ℝ) ↔ ((((1:ℕ) : ℝ) + (((-2:ℤ) : ℝ) * (x ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) : ℝ) ≥ ((0:ℕ) : ℝ) := by term_derivation_num_comparison ≥ d19 d20 d38 eq_identity_coercion eq_nat_to_real_coercion
     have d40 : x = x := by term_derivation_reflection
     have d41 : (2:ℕ) = (2:ℕ) := by term_derivation_reflection
-    have d42 : (x ^ (2:ℕ) : ℝ) = (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) := by term_derivation_non_reduced_power
+    have d42 : (x ^ (2:ℕ) : ℝ) = (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) := by term_derivation_non_reduced_power d40 d41
     have d43 : (1:ℕ) = (1:ℕ) := by term_derivation_reflection
     have d44 : ((((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) + ((1:ℕ) : ℝ) : ℝ) = (((1:ℕ) : ℝ) + (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_product_add_literal
     have d45 : ((x ^ (2:ℕ) : ℝ) + ((1:ℕ) : ℝ) : ℝ) = (((1:ℕ) : ℝ) + (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_add_eq d42 d43 eq_identity_coercion eq_nat_to_real_coercion d44
@@ -274,7 +274,7 @@ def h (x : ℝ) (h1 : x > ((0:ℕ) : ℝ)) : (x + (((1:ℕ) : ℝ) / x : ℝ) : 
     have d50 : (1:ℕ) = (1:ℕ) := by term_derivation_reflection
     have d51 : x = x := by term_derivation_reflection
     have d52 : (2:ℕ) = (2:ℕ) := by term_derivation_reflection
-    have d53 : (x ^ (2:ℕ) : ℝ) = (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) := by term_derivation_non_reduced_power
+    have d53 : (x ^ (2:ℕ) : ℝ) = (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) := by term_derivation_non_reduced_power d51 d52
     have d54 : (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) = (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) := by term_derivation_one_mul
     have d55 : (((1:ℕ) : ℝ) + (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) : ℝ) = (((1:ℕ) : ℝ) + (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_reflection
     have d56 : (((1:ℕ) : ℝ) + (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) : ℝ) = (((1:ℕ) : ℝ) + (((1:ℕ) : ℝ) * (x ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_add_eq d50 d54 eq_nat_to_real_coercion eq_identity_coercion d55
@@ -567,7 +567,7 @@ def h (a b : ℝ) (h1 : a > ((0:ℕ) : ℝ)) (h2 : b > ((0:ℕ) : ℝ)) : ((a / 
     have d17 : (-2:ℤ) = (-2:ℤ) := by term_derivation_reflection
     have d18 : b = b := by term_derivation_reflection
     have d19 : (-1:ℤ) = (-1:ℤ) := by term_derivation_reflection
-    have d20 : (b ^ (-1:ℤ) : ℝ) = (((1:ℕ) : ℝ) * (b ^ (-1:ℤ) : ℝ) : ℝ) := by term_derivation_non_reduced_power
+    have d20 : (b ^ (-1:ℤ) : ℝ) = (((1:ℕ) : ℝ) * (b ^ (-1:ℤ) : ℝ) : ℝ) := by term_derivation_non_reduced_power d18 d19
     have d21 : a = a := by term_derivation_reflection
     have d22 : (a ^ (1:ℕ) : ℝ) = a := by term_derivation_power_one
     have d23 : ((((1:ℕ) : ℝ) * (b ^ (-1:ℤ) : ℝ) : ℝ) * a : ℝ) = (((1:ℕ) : ℝ) * ((b ^ (-1:ℤ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_simple_product_mul_base_less
@@ -579,7 +579,7 @@ def h (a b : ℝ) (h1 : a > ((0:ℕ) : ℝ)) (h2 : b > ((0:ℕ) : ℝ)) : ((a / 
     have d29 : (b ^ (1:ℕ) : ℝ) = b := by term_derivation_power_one
     have d30 : a = a := by term_derivation_reflection
     have d31 : (-1:ℤ) = (-1:ℤ) := by term_derivation_reflection
-    have d32 : (a ^ (-1:ℤ) : ℝ) = (((1:ℕ) : ℝ) * (a ^ (-1:ℤ) : ℝ) : ℝ) := by term_derivation_non_reduced_power
+    have d32 : (a ^ (-1:ℤ) : ℝ) = (((1:ℕ) : ℝ) * (a ^ (-1:ℤ) : ℝ) : ℝ) := by term_derivation_non_reduced_power d30 d31
     have d33 : (b * ((1:ℕ) : ℝ) : ℝ) = b := by term_derivation_mul_one
     have d34 : (b * (a ^ (-1:ℤ) : ℝ) : ℝ) = (((1:ℕ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (-1:ℤ) : ℝ) : ℝ) : ℝ) := by term_derivation_atom_mul_exponential_less
     have d35 : (b * (((1:ℕ) : ℝ) * (a ^ (-1:ℤ) : ℝ) : ℝ) : ℝ) = (((1:ℕ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (-1:ℤ) : ℝ) : ℝ) : ℝ) := by term_derivation_mul_product d33 d34 eq_identity_coercion comm_ring_mul_identity_coercion comm_ring_mul_identity_coercion
@@ -607,7 +607,7 @@ def h (a b : ℝ) (h1 : a > ((0:ℕ) : ℝ)) (h2 : b > ((0:ℕ) : ℝ)) : ((a / 
     have d57 : (2:ℕ) = (2:ℕ) := by term_derivation_reflection
     have d58 : b = b := by term_derivation_reflection
     have d59 : (-1:ℤ) = (-1:ℤ) := by term_derivation_reflection
-    have d60 : (b ^ (-1:ℤ) : ℝ) = (((1:ℕ) : ℝ) * (b ^ (-1:ℤ) : ℝ) : ℝ) := by term_derivation_non_reduced_power
+    have d60 : (b ^ (-1:ℤ) : ℝ) = (((1:ℕ) : ℝ) * (b ^ (-1:ℤ) : ℝ) : ℝ) := by term_derivation_non_reduced_power d58 d59
     have d61 : a = a := by term_derivation_reflection
     have d62 : (a ^ (1:ℕ) : ℝ) = a := by term_derivation_power_one
     have d63 : ((((1:ℕ) : ℝ) * (b ^ (-1:ℤ) : ℝ) : ℝ) * a : ℝ) = (((1:ℕ) : ℝ) * ((b ^ (-1:ℤ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_simple_product_mul_base_less
@@ -618,7 +618,7 @@ def h (a b : ℝ) (h1 : a > ((0:ℕ) : ℝ)) (h2 : b > ((0:ℕ) : ℝ)) : ((a / 
     have d68 : (b ^ (1:ℕ) : ℝ) = b := by term_derivation_power_one
     have d69 : a = a := by term_derivation_reflection
     have d70 : (-1:ℤ) = (-1:ℤ) := by term_derivation_reflection
-    have d71 : (a ^ (-1:ℤ) : ℝ) = (((1:ℕ) : ℝ) * (a ^ (-1:ℤ) : ℝ) : ℝ) := by term_derivation_non_reduced_power
+    have d71 : (a ^ (-1:ℤ) : ℝ) = (((1:ℕ) : ℝ) * (a ^ (-1:ℤ) : ℝ) : ℝ) := by term_derivation_non_reduced_power d69 d70
     have d72 : (b * ((1:ℕ) : ℝ) : ℝ) = b := by term_derivation_mul_one
     have d73 : (b * (a ^ (-1:ℤ) : ℝ) : ℝ) = (((1:ℕ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (-1:ℤ) : ℝ) : ℝ) : ℝ) := by term_derivation_atom_mul_exponential_less
     have d74 : (b * (((1:ℕ) : ℝ) * (a ^ (-1:ℤ) : ℝ) : ℝ) : ℝ) = (((1:ℕ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (-1:ℤ) : ℝ) : ℝ) : ℝ) := by term_derivation_mul_product d72 d73 eq_identity_coercion comm_ring_mul_identity_coercion comm_ring_mul_identity_coercion
