impl term_derivation_add_sum

--- a/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch0.tex
+++ b/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch0.tex
@@ -823,7 +823,7 @@ def h (a b c : ℝ) : (((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) + (c ^ 
     have d518 : (((((0:ℕ) : ℝ) + (((1:ℕ) : ℝ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((-1:ℤ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = (((((0:ℕ) : ℝ) + (((-1:ℤ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_sum_add_product_greater d516 d517 comm_ring_add_identity_coercion real_real_real_coercion_triangle real_real_real_coercion_triangle eq_identity_coercion comm_ring_add_identity_coercion real_real_real_coercion_triangle real_real_real_coercion_triangle
     have d519 : ((((((0:ℕ) : ℝ) + (((-1:ℤ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) = ((((((0:ℕ) : ℝ) + (((-1:ℤ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_reflection
     have d520 : ((((((0:ℕ) : ℝ) + (((1:ℕ) : ℝ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((-1:ℤ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = ((((((0:ℕ) : ℝ) + (((-1:ℤ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_sum_add_product_greater d518 d519 comm_ring_add_identity_coercion real_real_real_coercion_triangle real_real_real_coercion_triangle eq_identity_coercion comm_ring_add_identity_coercion real_real_real_coercion_triangle real_real_real_coercion_triangle
-    have d521 : ((((((0:ℕ) : ℝ) + (((1:ℕ) : ℝ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((0:ℕ) : ℝ) + (((-1:ℤ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) : ℝ) = ((((((0:ℕ) : ℝ) + (((-1:ℤ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_add_sum
+    have d521 : ((((((0:ℕ) : ℝ) + (((1:ℕ) : ℝ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((0:ℕ) : ℝ) + (((-1:ℤ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) : ℝ) = ((((((0:ℕ) : ℝ) + (((-1:ℤ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_add_sum d500 d520 comm_ring_add_identity_coercion nat_real_real_coercion_triangle real_real_real_coercion_triangle eq_identity_coercion comm_ring_add_identity_coercion real_real_real_coercion_triangle nat_real_real_coercion_triangle real_real_real_coercion_triangle eq_identity_coercion comm_ring_add_identity_coercion real_real_real_coercion_triangle real_real_real_coercion_triangle
     have d522 : ((((0:ℕ) : ℝ) + (((-1:ℤ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((-1:ℤ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = ((((0:ℕ) : ℝ) + (((-1:ℤ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((-1:ℤ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) := by term_derivation_reflection
     have d523 : (((((0:ℕ) : ℝ) + (((-1:ℤ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((-1:ℤ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) = (((((0:ℕ) : ℝ) + (((-1:ℤ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((-1:ℤ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_reflection
     have d524 : (((((0:ℕ) : ℝ) + (((-1:ℤ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((-1:ℤ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = (((((0:ℕ) : ℝ) + (((-1:ℤ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((-1:ℤ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_sum_add_product_greater d522 d523 comm_ring_add_identity_coercion real_real_real_coercion_triangle real_real_real_coercion_triangle eq_identity_coercion comm_ring_add_identity_coercion real_real_real_coercion_triangle real_real_real_coercion_triangle
@@ -831,9 +831,9 @@ def h (a b c : ℝ) : (((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) + (c ^ 
     have d526 : ((((((0:ℕ) : ℝ) + (((-1:ℤ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((-1:ℤ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = ((((((0:ℕ) : ℝ) + (((-1:ℤ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((-1:ℤ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_sum_add_product_greater d524 d525 comm_ring_add_identity_coercion real_real_real_coercion_triangle real_real_real_coercion_triangle eq_identity_coercion comm_ring_add_identity_coercion real_real_real_coercion_triangle real_real_real_coercion_triangle
     have d527 : (((((((0:ℕ) : ℝ) + (((-1:ℤ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((-1:ℤ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) = (((((((0:ℕ) : ℝ) + (((-1:ℤ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((-1:ℤ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_reflection
     have d528 : (((((((0:ℕ) : ℝ) + (((-1:ℤ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((-1:ℤ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = (((((((0:ℕ) : ℝ) + (((-1:ℤ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((-1:ℤ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_sum_add_product_greater d526 d527 comm_ring_add_identity_coercion real_real_real_coercion_triangle real_real_real_coercion_triangle eq_identity_coercion comm_ring_add_identity_coercion real_real_real_coercion_triangle real_real_real_coercion_triangle
-    have d529 : ((((((0:ℕ) : ℝ) + (((1:ℕ) : ℝ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((((0:ℕ) : ℝ) + (((-1:ℤ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((-1:ℤ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) : ℝ) = (((((((0:ℕ) : ℝ) + (((-1:ℤ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((-1:ℤ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_add_sum
+    have d529 : ((((((0:ℕ) : ℝ) + (((1:ℕ) : ℝ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((((0:ℕ) : ℝ) + (((-1:ℤ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((-1:ℤ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) : ℝ) = (((((((0:ℕ) : ℝ) + (((-1:ℤ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((-1:ℤ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_add_sum d521 d528 comm_ring_add_identity_coercion real_real_real_coercion_triangle real_real_real_coercion_triangle eq_identity_coercion comm_ring_add_identity_coercion real_real_real_coercion_triangle real_real_real_coercion_triangle real_real_real_coercion_triangle eq_identity_coercion comm_ring_add_identity_coercion real_real_real_coercion_triangle real_real_real_coercion_triangle
     have d530 : ((((((((0:ℕ) : ℝ) + (((-1:ℤ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((-1:ℤ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((-1:ℤ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = ((((((((0:ℕ) : ℝ) + (((-1:ℤ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((-1:ℤ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((-1:ℤ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) := by term_derivation_reflection
-    have d531 : ((((((0:ℕ) : ℝ) + (((1:ℕ) : ℝ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((((0:ℕ) : ℝ) + (((-1:ℤ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((-1:ℤ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((-1:ℤ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) : ℝ) = ((((((((0:ℕ) : ℝ) + (((-1:ℤ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((-1:ℤ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((-1:ℤ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) := by term_derivation_add_sum
+    have d531 : ((((((0:ℕ) : ℝ) + (((1:ℕ) : ℝ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((((0:ℕ) : ℝ) + (((-1:ℤ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((-1:ℤ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((-1:ℤ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) : ℝ) = ((((((((0:ℕ) : ℝ) + (((-1:ℤ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((-1:ℤ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((-1:ℤ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) := by term_derivation_add_sum d529 d530 comm_ring_add_identity_coercion real_real_real_coercion_triangle real_real_real_coercion_triangle eq_identity_coercion comm_ring_add_identity_coercion real_real_real_coercion_triangle real_real_real_coercion_triangle real_real_real_coercion_triangle eq_identity_coercion comm_ring_add_identity_coercion real_real_real_coercion_triangle real_real_real_coercion_triangle
     have d532 : ((((((0:ℕ) : ℝ) + (((1:ℕ) : ℝ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (-(((((0:ℕ) : ℝ) + (((1:ℕ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) : ℝ) : ℝ) = ((((((((0:ℕ) : ℝ) + (((-1:ℤ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((-1:ℤ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((-1:ℤ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) := by term_derivation_add_eq d465 d499 eq_identity_coercion eq_identity_coercion d531
     have d533 : ((((((0:ℕ) : ℝ) + (((1:ℕ) : ℝ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) - (((((0:ℕ) : ℝ) + (((1:ℕ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) : ℝ) = ((((((((0:ℕ) : ℝ) + (((-1:ℤ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((-1:ℤ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((-1:ℤ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) := by term_derivation_sub_eqs_add_neg d532 neg_identity_coercion
     have d534 : (((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) + (c ^ (2:ℕ) : ℝ) : ℝ) ≥ (((a * b : ℝ) + (b * c : ℝ) : ℝ) + (c * a : ℝ) : ℝ) ↔ ((((((((0:ℕ) : ℝ) + (((-1:ℤ) : ℝ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((-1:ℤ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℕ) : ℝ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((-1:ℤ) : ℝ) * ((c ^ (1:ℕ) : ℝ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) ≥ ((0:ℕ) : ℝ) := by term_derivation_num_comparison ≥ d430 d448 d533 eq_identity_coercion eq_identity_coercion
